tests/init/full/neg/global-cycle2.scala
object A {
  val a: Int = B.foo()      // error
}

object B {
  def foo(): Int = A.a * 2
}
